--- a/views/match/button_entry.pug
+++ b/views/match/button_entry.pug
@@ -1,106 +1,37 @@
 extends ../layout.pug
 
 block scripts
+    script
+        include socketio_helper.js
     script.
         $(function () {
             FastClick.attach(document.body);
+
             $(document).ready(function(){
                 var scores = {};
+                var matchId = $('#submit-score-button').data('match-id');
                 window.darts_thrown = 0;
+                $(document).scrollTop(170);
+                
+                var socket = setupSocketIO(matchId);
 
                 $('[data-toggle="popover"]').popover();
-
-                var matchId = $('#submit-score-button').data('match-id');
-                var socket = io('http://' + window.location.hostname + ':3000/match/' + matchId);
-                socket.on('connect', function(data) {
-                    socket.emit('join', 'Client Conneting');
-                });
-
-                socket.on('spectator_connected', function(data) {
-                    alertify.success('Spectator connected');
-                });
-                socket.on('spectator_disconnected', function(data) {
-                    alertify.warning('Spectator disconnected');
-                });
-
-                socket.on('connected', function(data) {
-                    console.log(data);
-                });
-
-                socket.on('match_finished', function(data) {
-                    // Forward all clients to results page when match is finished
-                    location.href = window.location.pathname + '/leg';
-                });
-
-                socket.on('score_update', function(data) {
-                    console.log(data);
-                    $('#submit-score-button').prop('disabled', false);
-
-                    var match = data.match;
-                    $('#round-number').text('R' + match.round_number);
-
-                    // Set updated score per player
-                    var currentPlayerId = data.current_player;
-                    var players = data.players;
-                    for (key in players) {
-                        var player = players[key];
-                        console.log(player)
-                        var td = $('#player_score_' + player.id);
-                        var label = td.find('.label-player-score');
-                        label.text(player.current_score);
-
-                        if (player.id === currentPlayerId) {
-                            td.removeClass(1);
-                            td.addClass('label-active-player ' + player.modifier_class)
-                            label.attr('id', 'current-player');
-                            $('#submit-score-button').data('current-player-id', player.id);
-                        }
-                        else {
-                            td.removeClass();
-                            td.addClass('label-inactive-player ' + player.modifier_class);
-                            label.attr('id', 'player-label-' + player.id);
-                            label.removeAttr('data-current-player-id');
-                        }
-
-                        // Update the popover with First 9 and PPD
-                        var popoverContent = 'First 9: ' + player.first9ppd.toFixed(2) + ', PPD: ' + player.ppd.toFixed(2);
-                        label.attr('data-content', popoverContent).data('bs.popover').setContent();
-                    }
-
-                    // Reset UI elements
-                    window.darts_thrown = 0;
-                    $('#first').text('');
-                    $('#first').removeAttr('data-score');
-                    $('#first').attr('data-multiplier', 1);
-                    $('#first').attr('data-checkout', 0);
-                    $('#second').text('');
-                    $('#second').removeAttr('data-score');
-                    $('#second').attr('data-multiplier', 1);
-                    $('#second').attr('data-checkout', 0);
-                    $('#third').text('');
-                    $('#third').removeAttr('data-score');
-                    $('#third').attr('data-multiplier', 1);
-                    $('#third').attr('data-checkout', 0);
-                    $('#submit-score-button').data('busted', 0);
-                    $('#submit-score-button').data('finished', 0);
-                });
-
 
                 $('#submit-score-button').click(function (event) {
                     $('#submit-score-button').prop('disabled', true);
 
                     $('[data-toggle=popover]').popover('hide'); // Hide the popover when a button is pressed
-                    // Scores
-                    var firstScoreNumeric = $('#first').attr('data-score');
-                    var secondScoreNumeric = $('#second').attr('data-score');
-                    var thirdScoreNumeric = $('#third').attr('data-score');
 
-                    // Multipliers
+                    
+                    var firstScoreNumeric = $('#first').attr('data-score');
                     var firstScoreMultiplier = $('#first').attr('data-multiplier');
+
+                    var secondScoreNumeric = $('#second').attr('data-score');
                     var secondScoreMultiplier = $('#second').attr('data-multiplier');
+
+                    var thirdScoreNumeric = $('#third').attr('data-score');
                     var thirdScoreMultiplier =  $('#third').attr('data-multiplier');
-                    // Checkouts
-                    // FIXME: If you press "submit" without selecting 'Miss' these will not be populated, need to fix this!
+
                     var isCheckoutFirst = $('#first').attr('data-checkout');
                     var isCheckoutSecond = $('#second').attr('data-checkout');
                     var isCheckoutThird = $('#third').attr('data-checkout');
@@ -112,19 +43,19 @@ block scripts
                     var isFinished = $(this).data('finished');
 
                     var data = JSON.stringify({
-                        'matchId': matchId,
-                        'playerId': currentPlayerId,
-                        'firstDart': firstScoreNumeric,
-                        'secondDart': secondScoreNumeric,
-                        'thirdDart': thirdScoreNumeric,
-                        'firstDartMultiplier': firstScoreMultiplier,
-                        'secondDartMultiplier': secondScoreMultiplier,
-                        'thirdDartMultiplier': thirdScoreMultiplier,
-                        'playersInMatch': playersInMatch,
-                        'isBust': isBust,
-                        'isCheckoutFirst': isCheckoutFirst,
-                        'isCheckoutSecond': isCheckoutSecond,
-                        'isCheckoutThird': isCheckoutThird,
+                        matchId: matchId,
+                        playerId: currentPlayerId,
+                        firstDart: firstScoreNumeric,
+                        secondDart: secondScoreNumeric,
+                        thirdDart: thirdScoreNumeric,
+                        firstDartMultiplier: firstScoreMultiplier,
+                        secondDartMultiplier: secondScoreMultiplier,
+                        thirdDartMultiplier: thirdScoreMultiplier,
+                        playersInMatch: playersInMatch,
+                        isBust: isBust,
+                        isCheckoutFirst: isCheckoutFirst,
+                        isCheckoutSecond: isCheckoutSecond,
+                        isCheckoutThird: isCheckoutThird,
                     });
 
                     if (isFinished) {
@@ -299,32 +230,15 @@ block scripts
                     dart.removeAttr('data-score');
                 });
             });
-        });
-    script.
-        $(function () {
-            $(document).ready(function () {
-                $(document).scrollTop(170);
-            });
 
-            var enterPress = 0;
-            $(document).keypress(function(e) {
-                switch(e.key) {
-                    case 'Enter':
-                        enterPress++;
-                    default:
-                        break;
-                }
-                if (enterPress >= 2) {
-                    var matchId = $('#toggle-keyboard-button').data('match-id')
-                    window.location.href = '/match/' + matchId + '/keyboard';
-                }
-            });
             $('#toggle-keyboard-button').click(function () {
                 location.href = window.location.pathname + '/keyboard';
             });
+
             $('#edit-scores-button').click(function () {
                 location.href = window.location.pathname + '/leg';
             });
+
             $('#cancel-match-button').click(function () {
                 showConfirm('Game will be cancelled.', function() {
                     executeDelete(window.location.pathname + '/cancel',
@@ -338,6 +252,16 @@ block scripts
                         }
                     );
                 }, function(){ /* NOOP */ });
+            });
+
+            var enterPress = 0;
+            $(document).keypress(function(e) {
+                if (e.key === 'Enter') {
+                    enterPress++;
+                }
+                if (enterPress >= 2) {
+                    location.href = window.location.pathname + '/keyboard';
+                }
             });
         });
 
@@ -370,7 +294,7 @@ block content
                             - var td_class = 'label-inactive-player ' + modifier_class;
                             if player.current
                                 - td_class = 'label-active-player ' + modifier_class;
-                            td(id='player_score_' + player.id + '' colspan=length + '' class=td_class style='padding-right: 10px;')
+                            td(id='player-score-' + player.id + '' colspan=length + '' class=td_class style='padding-right: 10px;')
                                 label(id=player.current ? 'current-player' : 'player-label-' + player.id class='label label-block label-player-score' data-container='body' data-toggle='popover' data-placement='top' data-content='First 9: ' + player.first9ppd.toFixed(2) + ', PPD: ' + player.ppd.toFixed(2))= player.current_score
                                 label(class='label-player-name')= player.name + player.wins_string
                         +player_label(player)
