--- a/views/match/keyboard_entry.pug
+++ b/views/match/keyboard_entry.pug
@@ -549,5 +549,5 @@ block content
             li: a(id='toggle-keyboard-button') Disable keyboard mode
             li: a(id='edit-scores-button') Edit scores
             li: a(id='cancel-match-button') Cancel Match
-    div
+    // div
         p(id='spectator_count') Spectator Count: 0
