--- a/views/match/keyboard_entry.pug
+++ b/views/match/keyboard_entry.pug
@@ -417,7 +417,7 @@ block scripts
                         return;
                     }
                     var currentPlayerId = $('#submit-score-button').data('current-player-id');
-                    var currentPlayer = $('#current_player');
+                    var currentPlayer = $('#current-player');
                     var currentPlayerScore = parseInt(currentPlayer.text());
                     window.darts_thrown--;
                     currentPlayer.text(currentPlayerScore + scores[window.darts_thrown]);
