--- a/views/match/spectate.pug
+++ b/views/match/spectate.pug
@@ -104,7 +104,7 @@ block scripts
                             "<td class='dart-score-container no-border'><label class='" + thirdDartCSS + "'>" + thirdDartScore + "</label></td>" +
                             "<td><label>" + total + "</label></td>" +
                         "</tr>";
-                    $('#visits_table > tbody > tr:first').after(html);
+                    $('#visits-table > tbody > tr:first').after(html);
                 });
 
                 socket.on('match_finished', function(data) {
@@ -113,7 +113,7 @@ block scripts
                 });
 
                 // Reverse the rows in the table to show newest throws first
-                var tbody = $('#visits_table tbody');
+                var tbody = $('#visits-table tbody');
                 tbody.html($('tr',tbody).get().reverse());
 
                 // Add a row to the top of the table which contains the current throw for a given player
@@ -121,31 +121,30 @@ block scripts
                     var html =
                         "<tr>" +
                             "<td id='current_player' style='height: 50px;'>" + playersMap['p' + match.current_player_id].name + "</td>" +
-                            "<td class='dart-score-container no-border'><label id='first' text='0' data-multiplier='1' data-checkout='0'></label></td>" +
-                            "<td class='dart-score-container no-border'><label id='second' text='0' data-multiplier='1' data-checkout='0'></label></td>" +
-                            "<td class='dart-score-container no-border'><label id='third' text='0' data-multiplier='1' data-checkout='0'></label></td>" +
+                            "<td class='dart-score-container no-border'><label id='first' text='0'></label></td>" +
+                            "<td class='dart-score-container no-border'><label id='second' text='0'></label></td>" +
+                            "<td class='dart-score-container no-border'><label id='third' text='0'></label></td>" +
                             "<td><label id='total' text='0'>0</label></td>" +
                         "</tr>";
-                    $('#visits_table').prepend(html);
+                    $('#visits-table').prepend(html);
                 }
             });
             function getDartCSS(multiplier) {
-                if (multiplier === 3) {
-                    return 'dart-triple';
+                switch (multiplier) {
+                    case 3: return 'dart-triple';
+                    case 2: return 'dart-double';
+                    default: return 'dart-single';
                 }
-                else if (multiplier === 2) {
-                    return 'dart-double';
-                }
-                return 'dart-single';
             }
+
             function getScoreString(multiplier, score) {
                 if (score === 0) {
                     return 'Miss';
                 }
-
-                if (score === 25) {
+                else if (score === 25) {
                     score = 'Bull';
                 }
+
                 if (multiplier === 3) {
                     return 'T-' + score;
                 }
@@ -154,53 +153,51 @@ block scripts
                 }
                 return score;
             }
-
         });
 
 block content
     h2 Spectate
 
-    h3 Players
-    // div(class='table-responsive')
-        table(class='table table-striped table-bordered' id='player_spectate_table')
-            thead
-                tr
-                    th Player
-                    th Score
-                    th PPD
-            tbody
-                each player in players
-                    tr
-                        td(class='')
-                            label(style='text-align: center;font-size: 1em;')= player.name + player.wins_string
-                        td(align='center' class='label-inactive-player')
-                            label(id='player_id_' + player.id class='label label-block label-player-score')= player.current_score
-                        td(align='center'): label(id='player_id_' + player.id + '_ppd' style='font-weight: 500;')= player.ppd.toFixed(2)
+    mixin get_player_cell(player)
+        td(id='player_score_' + player.id colspan='3' class=player.current ? 'label-active-player' : 'label-inactive-player' style='padding-right: 10px;')
+            label(id='player_id_' + player.id class='label label-block label-player-score')= player.current_score
+            label(id='player_name_' + player.name class='label-player-name')= player.name + player.wins_string
 
+    h3 Players
     div(class='table-responsive')
-        table(class='table table-striped table-bordered' id='player_spectate_table')
+        table(class='table table-striped table-bordered' id='player-spectate-table')
             tbody
                 tr
                     td(colspan='1' class='txt-center' style='width: 10%;')
                         label(id='round_number' class='match_information')= 'R' + match.round_number
                         label(class='match_information')= '/' +game_type.short_name
                     each player in players
-                        if  player.current
-                            td(id='player_score_' + player.id colspan='3' class='label-active-player' style='padding-right: 10px;')
-                                label(id='player_id_' + player.id class='label label-block label-player-score')= player.current_score
-                                label(id='player_name_' + player.name class='label-player-name')= player.name + player.wins_string
-                        else
-                            td(id='player_score_' + player.id colspan='3' class='label-inactive-player' style='padding-right: 10px;')
-                                label(id='player_id_' + player.id class='label label-block label-player-score')= player.current_score
-                                label(id='player_name_' + player.name class='label-player-name')= player.name + player.wins_string
+                        +get_player_cell(player)
                 tr
                     td(colspan='1' class='txt-center' style='width: 10%;') PPD
                     each player in players
                         td(id='player_ppd_' + player.id colspan='3' style='padding-right: 10px;')
                             label(id='player_id_' + player.id + '_ppd' style='font-weight: 500')= player.ppd.toFixed(2)
+    
+    mixin get_dart_label(value, multiplier)
+        if multiplier == 3
+            label(class='btn-score dart-triple')= 'T-' + value
+        else if multiplier == 2
+            if value == 25
+                label(class='btn-score dart-double') Bull
+            else
+                label(class='btn-score dart-double')= 'D-' + value
+        else
+            if value == 0
+                label(class='btn-score') Miss
+            else if value == 25
+                label(class='btn-score') Bull
+            else
+                label(class='btn-score')= value
+    
     h3 Visits
     div(class='table-responsive')
-        table(class='table table-striped table-bordered' id='visits_table')
+        table(class='table table-striped table-bordered' id='visits-table')
             thead
                 tr
                     th Player
@@ -213,52 +210,15 @@ block content
                     tr
                         td= players['p' + visit.player_id].name
                         td(class='dart-score-container no-border')
-                            if visit.first_dart_multiplier == 3
-                                label(class='btn-score dart-triple')= 'T-' + visit.first_dart
-                            else if visit.first_dart_multiplier == 2
-                                if visit.first_dart == 25
-                                    label(class='btn-score dart-double') Bull
-                                else
-                                    label(class='btn-score dart-double')= 'D-' + visit.first_dart
-                            else
-                                if visit.first_dart == 0
-                                    label(class='btn-score') Miss
-                                else if visit.first_dart == 25
-                                    label(class='btn-score') Bull
-                                else
-                                    label(class='btn-score')= visit.first_dart
+                            +get_dart_label(visit.first_dart, visit.first_dart_multiplier)
+
                         td(class='dart-score-container no-border')
-                            if visit.second_dart_multiplier == 3
-                                label(class='btn-score dart-triple')= 'T-' + visit.second_dart
-                            else if visit.second_dart_multiplier == 2
-                                if visit.second_dart == 25
-                                    label(class='btn-score dart-double') Bull
-                                else
-                                    label(class='btn-score dart-double')= 'D-' + visit.second_dart
-                            else
-                                if visit.second_dart == 0
-                                    label(class='btn-score') Miss
-                                else if visit.second_dart == 25
-                                    label(class='btn-score') Bull
-                                else
-                                    label(class='btn-score')= visit.second_dart
+                            +get_dart_label(visit.second_dart, visit.second_dart_multiplier)
+
                         td(class='dart-score-container no-border')
-                            if visit.third_dart_multiplier == 3
-                                label(class='btn-score dart-triple')= 'T-' + visit.third_dart
-                            else if visit.third_dart_multiplier == 2
-                                if visit.third_dart == 25
-                                    label(class='btn-score dart-double') Bull
-                                else
-                                    label(class='btn-score dart-double')= 'D-' + visit.third_dart
-                            else
-                                if visit.third_dart == 0
-                                    label(class='btn-score') Miss
-                                else if visit.third_dart == 25
-                                    label(class='btn-score') Bull
-                                else
-                                    label(class='btn-score')= visit.third_dart
+                            +get_dart_label(visit.third_dart, visit.third_dart_multiplier)
                         td
-                            if visit.is_bust === 1
+                            if visit.is_bust
                                 label BUST
                             else
                                 label= (visit.first_dart_multiplier * visit.first_dart ) + (visit.second_dart_multiplier * visit.second_dart) + (visit.third_dart_multiplier * visit.third_dart)
