--- a/views/match/spectate.pug
+++ b/views/match/spectate.pug
@@ -7,7 +7,7 @@ block scripts
         $(function () {
             $(document).ready(function(){
                 var matchId = match.id;
-                var socket = io('http://' + window.location.hostname + ':3000/match/' + matchId);
+                var socket = io(window.location.protocol + '//' + window.location.host + '/match/' + matchId);
                 socket.on('connect', function(data) {
                     socket.emit('join', 'Client Conneting');
                 });
