--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,7 @@ html
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js')
 		link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet')
 		script(src='/js/alertify.min.js')
+		script(src='/js/moment.min.js')
 		link(rel='stylesheet' href='/css/alertify.min.css')
 		link(rel='stylesheet' href='/css/alertify.bootstrap.min.css')
 
@@ -41,7 +42,7 @@ html
 							li(class='active')
 								li: a(href='/player/list') Players
 								li: a(href='/cake/owes') Owes
-								li: a(href='/statistics/weekly') Weekly Stats
+								li: a(href='/statistics/weekly') Statistics
 								li: a(href='/game/list') Games
 			div(id='jumbotron' class='jumbotron')
 				block content
