--- a/views/weekly_overview.pug
+++ b/views/weekly_overview.pug
@@ -1,55 +1,81 @@
 extends layout.pug
 
+block scripts
+    script.
+        $(function() {
+            var originalFrom = $('#previous-btn').data('current-date');
+            var originalTo = $('#next-btn').data('current-date');
+            $('#previous-btn').click(function() {
+                var from = moment(originalFrom).isoWeekday(-6).format('YYYY-MM-DD');;
+                var to = originalFrom;
+                window.location.href = '/statistics/' + from + '/' + to;
+            });
+            $('#next-btn').click(function() {
+                var from = originalTo;
+                var to = moment(originalTo).isoWeekday(8).format('YYYY-MM-DD');;;
+                window.location.href = '/statistics/' + from + '/' + to;
+            });            
+        });        
+
+
 block content
-    h2 Weekly Statistics
+    div(class='row')
+        div(class='col-sm-6 text-left')
+            button(id='previous-btn' class='btn btn-primary' data-current-date=weekly.from) << Previous
+        div(class='col-sm-6 text-right')
+            button(id='next-btn' class='btn btn-primary' data-current-date=weekly.to) Next >>
 
-    mixin create_statistics_table(id, statistics)
-        if statistics.length === 0
-            p No matches played ...
-        else
-            div(class='table-responsive')
-                table(id=id class='table table-striped table-bordered')
-                    thead
-                        tr
-                            th(colspan='7')
-                            th(colspan='4') Per Game
-                            th(colspan='3') Accuracy              
-                        tr
-                            th Rank
-                            th Player
-                            th Played
-                            th Won
-                            th Win %                        
-                            th PPD
-                            th PPD (First 9)
-                            th 60s+
-                            th 100s+
-                            th 140s+
-                            th 180
-                            th Overall
-                            th 20s
-                            th 19s
-                    tbody
-                        - var rank = 1
-                        each stats in statistics
-                            tr
-                                td= rank++
-                                td(style='width: 12%'): a(href='/player/' + stats.player_id + '/stats')= stats.player_name
-                                td= stats.games_played
-                                td= stats.games_won === undefined ? 0 : stats.games_won
-                                td= stats.games_won === undefined ? 0 : (stats.games_won / stats.games_played * 100).toFixed(2)
-                                td= stats.ppd.toFixed(2)
-                                td(style='width: 12%')= stats.first_nine_ppd.toFixed(2)
-                                td= stats['60s_plus'] == 0 ? 0 : (stats['60s_plus'] / stats.games_played).toFixed(2)
-                                td= stats['100s_plus'] == 0 ? 0 : (stats['100s_plus'] / stats.games_played).toFixed(2)
-                                td= stats['140s_plus'] == 0 ? 0 : (stats['140s_plus'] / stats.games_played).toFixed(2)
-                                td= stats['180s'] == 0 ? 0 : (stats['180s'] / stats.games_played).toFixed(2)
-                                td= stats.overall_accuracy === null ? '-' : stats.overall_accuracy.toFixed(2)
-                                td= stats.accuracy_20 === null ? '-' : stats.accuracy_20.toFixed(2)
-                                td= stats.accuracy_19 === null ? '-' : stats.accuracy_19.toFixed(2)
+    div(class='col-lg-14')
+        div(class='row')
+            h2= "Statistics (" + weekly.from + " to " + weekly.to + ")"
 
-    h3 Current
-        +create_statistics_table('current_week_statistics_table', weekly.this_week)
-            
-    h3 Last Week
-        +create_statistics_table('last_week_statistics_table', weekly.last_week)
+            mixin create_statistics_table(id, statistics)
+                if statistics.length === 0
+                    p No matches played ...
+                else
+                    div(class='table-responsive')
+                        table(id=id class='table table-striped table-bordered')
+                            thead
+                                tr
+                                    th(colspan='7')
+                                    th(colspan='4') Per Game
+                                    th(colspan='3') Accuracy              
+                                tr
+                                    th Rank
+                                    th Player
+                                    th Played
+                                    th Won
+                                    th Win %                        
+                                    th PPD
+                                    th PPD (First 9)
+                                    th 60s+
+                                    th 100s+
+                                    th 140s+
+                                    th 180
+                                    th Overall
+                                    th 20s
+                                    th 19s
+                            tbody
+                                - var rank = 1
+                                each stats in statistics
+                                    tr
+                                        td= rank++
+                                        td(style='width: 12%'): a(href='/player/' + stats.player_id + '/stats')= stats.player_name
+                                        td= stats.games_played
+                                        td= stats.games_won === undefined ? 0 : stats.games_won
+                                        td= stats.games_won === undefined ? 0 : (stats.games_won / stats.games_played * 100).toFixed(2)
+                                        td= stats.ppd.toFixed(2)
+                                        td(style='width: 12%')= stats.first_nine_ppd.toFixed(2)
+                                        td= stats['60s_plus'] == 0 ? 0 : (stats['60s_plus'] / stats.games_played).toFixed(2)
+                                        td= stats['100s_plus'] == 0 ? 0 : (stats['100s_plus'] / stats.games_played).toFixed(2)
+                                        td= stats['140s_plus'] == 0 ? 0 : (stats['140s_plus'] / stats.games_played).toFixed(2)
+                                        td= stats['180s'] == 0 ? 0 : (stats['180s'] / stats.games_played).toFixed(2)
+                                        td= stats.overall_accuracy === null ? '-' : stats.overall_accuracy.toFixed(2)
+                                        td= stats.accuracy_20 === null ? '-' : stats.accuracy_20.toFixed(2)
+                                        td= stats.accuracy_19 === null ? '-' : stats.accuracy_19.toFixed(2)
+
+            +create_statistics_table('current_week_statistics_table', weekly.this_week)
+                    
+            if weekly.last_week            
+                h3 Last Week
+                    +create_statistics_table('last_week_statistics_table', weekly.last_week)
