Continued work on Go backend, adding player endpoints

--- a/views/players.pug
+++ b/views/players.pug
@@ -89,6 +89,9 @@ block content
 							div(class='form-group')
 								label(for='playerNameInput' class='control-label') Player Name:
 								input(type='text' class='form-control' id='playerNameInput')
+							div(class='form-group')
+								label(for='playerNicknameInput' class='control-label') Nickname:
+								input(type='text' class='form-control' id='playerNicknameInput')
 						div(class='modal-footer')
 							button(type='button' class='btn btn-default' data-dismiss='modal') Close
 							button(type='submit' class='btn btn-primary' id='addPlayerButton') Add Player
