--- a/views/game_result.pug
+++ b/views/game_result.pug
@@ -94,4 +94,4 @@ block content
                 tr
                     td(class='col-sm-2') 180
                     each player in players
-                        td= player.scores_180s
+                        td= player.scores_180
