--- a/views/player_statistics.pug
+++ b/views/player_statistics.pug
@@ -14,7 +14,7 @@ block scripts
         var size = 5;
         var spread = 20;
         var intensity = 30;
-        var scoresMap = !{JSON.stringify(scoresMap)};
+        var scoresMap = !{JSON.stringify(statistics.hits)};
         window.onload = (function(){
             var canvas = $('#dartboard-heatmap')[0];
             drawHeatmap(canvas, scoresMap, 0, size, spread, intensity);
@@ -47,20 +47,20 @@ block content
             tbody
                     tr
                         td
-                            p= player.gamesPlayed
+                            p= player.games_played
                         td
-                            p= player.gamesWon
+                            p= player.games_won
                         td
-                            p= player.gamesPlayed == 0 ? 0 : (player.gamesWon * 100 / player.gamesPlayed).toFixed(2)
+                            p= player.games_played == 0 ? 0 : (player.games_won * 100 / player.games_played).toFixed(2)
                         td
-                            p= player.first9ppd.toFixed(2)
+                            p= statistics.first_nine_ppd.toFixed(2)
                         td
-                            p= player.ppd.toFixed(2)
+                            p= statistics.ppd.toFixed(2)
                         td
-                            if player.gamesWon === 0
+                            if player.games_won === 0
                                 p -
                             else
-                                p= (player.gamesWon * 100 / (player.checkoutAttempts === null ? 0 : player.checkoutAttempts)).toFixed(2) + '%'
+                                p= statistics.checkout_percentage.toFixed(2) + '%'
         h3 High Scores
         table(id='player_highscores_table' class='table table-striped table-bordered')
             thead
@@ -71,10 +71,10 @@ block content
                     th 180
             tbody
                     tr
-                        td: p= player['60+']
-                        td: p= player['100+']
-                        td: p= player['140+']
-                        td: p= player['180s']
+                        td: p= statistics.scores_60s_plus
+                        td: p= statistics.scores_100s_plus
+                        td: p= statistics.scores_140s_plus
+                        td: p= statistics.scores_180s
         h3 Accuracy
         table(id='player_accuracy_table' class='table table-striped table-bordered')
             thead
@@ -85,11 +85,11 @@ block content
             tbody
                     tr
                         td
-                            p= player.overall_accuracy === null ? 'Not Available' : player.overall_accuracy.toFixed(2)
+                            p= statistics.accuracy_overall === null ? 'Not Available' : statistics.accuracy_overall.toFixed(2)
                         td
-                            p= player.accuracy_20 === null ? 'Not Available' : player.accuracy_20.toFixed(2)
+                            p= statistics.accuracy_20 === null ? 'Not Available' : statistics.accuracy_20.toFixed(2)
                         td
-                            p= player.accuracy_19 === null ? 'Not Available' : player.accuracy_19.toFixed(2)
+                            p= statistics.accuracy_19 === null ? 'Not Available' : statistics.accuracy_19.toFixed(2)
 
         h3 Hits
         table(id='player_scores_table' class='table table-striped table-bordered')
@@ -99,8 +99,8 @@ block content
                     th Count
                     th Hit %
             tbody
-                each score, key in scoresMap
-                    each value, multiplier in scoresMap[key]
+                each score, key in statistics.hits
+                    each value, multiplier in statistics.hits[key]
                         tr
                             td(class='col-sm-2 dart-score-container' data-order=key + multiplier)
                                 if multiplier == 3
@@ -118,7 +118,7 @@ block content
                                     else
                                         label= key
                             td= value
-                            td= (value * 100 / scoresMap.totalThrows).toFixed(2) + '%'
+                            td= (value * 100 / statistics.darts_thrown).toFixed(2) + '%'
 
     h3 Heatmap
     select(id='heatmap_value_selector' name='dartValues')
